--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>主页面</title>
+    <title>hello spring boot</title>
+    <link rel="icon" th:href="@{/pic/favicon.ico}" />
+
     <link
       th:href="@{/css/bootstrap.min.css}"
       rel="stylesheet"
