--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
   <head>
     <meta charset="UTF-8" />
     <title>hello spring boot</title>
@@ -102,6 +103,19 @@
           </tr>
         </tbody>
       </table>
+      <div class="starter-template">
+        <h1 th:text="${msg.code}"></h1>
+        <p class="bg-primary" th:text="${msg.data}"></p>
+        <div sec:authorize="hasRole('ADMIN')">
+          <p class="bg-info" th:text="${msg.msg}"></p>
+        </div>
+        <div sec:authorize="hasRole('USER')">
+          <p class="bg-info">无更多显示信息</p>
+        </div>
+        <form th:action="@{/logout}" method="post">
+          <input type="submit" class="btn btn-primary" value="注销"/>
+        </form>
+      </div>
     </div>
     <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
   </body>
