--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -65,6 +65,7 @@
         /> -->
         <img class="mb-4" th:src="@{/pic/logo.svg}" alt="spring" width="144" />
         <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+<!--        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
         <div class="form-floating">
           <input
             class="form-control"
