--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<html
+  lang="en"
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+>
   <head>
     <meta charset="UTF-8" />
     <title>hello spring boot</title>
@@ -103,17 +106,34 @@
           </tr>
         </tbody>
       </table>
+      <div sec:authorize="isAuthenticated()">
+        <p>已登录</p>
+        <p>登录名：<span sec:authentication="name"></span></p>
+        <p>Password：<span sec:authentication="principal.password"></span></p>
+        <div sec:authentication="principal.authorities"></div>
+        <!-- works fine -->
+        <p>Name：<span sec:authentication="principal.username"></span></p>
+        <p>Status：<span sec:authentication="principal.status"></span></p>
+      </div>
+
+      <div sec:authorize="!isAuthenticated()">
+        <a th:href="@{/login}">登录</a>
+      </div>
+      <div sec:authorize="isAuthenticated()">
+        <a th:href="@{/logout}">退出</a>
+      </div>
+
       <div class="starter-template">
         <h1 th:text="${msg.code}"></h1>
         <p class="bg-primary" th:text="${msg.data}"></p>
-        <div sec:authorize="hasRole('ADMIN')">
+        <div sec:authorize="hasRole('ROLE_ADMIN')">
           <p class="bg-info" th:text="${msg.msg}"></p>
         </div>
-        <div sec:authorize="hasRole('USER')">
+        <div sec:authorize="hasRole('ROLE_USER')">
           <p class="bg-info">无更多显示信息</p>
         </div>
         <form th:action="@{/logout}" method="post">
-          <input type="submit" class="btn btn-primary" value="注销"/>
+          <input type="submit" class="btn btn-primary" value="注销" />
         </form>
       </div>
     </div>
