--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Document</title>
+    <title>results</title>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<div>Congratulations! You are old enough to sign up for this site.</div>
+<div class="container">Congratulations! You are old enough to sign up for this site.</div>
 </body>
 </html>
